--- a/notebooks/fit_model_and_save_embeddings.ipynb
+++ b/notebooks/fit_model_and_save_embeddings.ipynb
@@ -31,15 +31,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# built-in modules and packages\n",
     "import sys\n",
-    "from pathlib import Path\n",
     "import pickle\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# installed modules and packages\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b52efcc5",
    "metadata": {},
    "outputs": [],
@@ -49,11 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "00fb1e26",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# local modules and packages\n",
     "from utils.upload_text import get_text\n",
     "from utils.preprocessing import DefaultPreprocess\n",
     "from utils.word2vec import Word2Vec"
