--- a/notebooks/outcomes_and_inferences.ipynb
+++ b/notebooks/outcomes_and_inferences.ipynb
@@ -17,19 +17,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "2d27ece0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# built-in modules and packages\n",
     "import sys\n",
     "import pickle\n",
+    "\n",
+    "# installed modules and packages\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "c5ca8d45",
    "metadata": {},
    "outputs": [],
@@ -39,11 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "3991aa60",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# local modules and packages\n",
     "from utils.word2vec import Word2Vec"
    ]
   },
