--- a/notebooks/task_1/task_1_kant_hegel_de.ipynb
+++ b/notebooks/task_1/task_1_kant_hegel_de.ipynb
@@ -22,8 +22,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# built-in modules and packages\n",
     "import sys\n",
     "import pickle\n",
+    "\n",
+    "# installed modules and packages\n",
     "import numpy as np"
    ]
   },
@@ -39,11 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "fee3c126",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# local modules and packages\n",
     "from utils.word2vec import Word2Vec"
    ]
   },
