--- a/notebooks/task_1/task_1_kant_hegel_eng.ipynb
+++ b/notebooks/task_1/task_1_kant_hegel_eng.ipynb
@@ -17,19 +17,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d3ee0e75",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# built-in modules and packages\n",
     "import sys\n",
     "import pickle\n",
+    "\n",
+    "# installed modules and packages\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "73efeee6",
    "metadata": {},
    "outputs": [],
@@ -39,11 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "13489f4e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# local modules and packages\n",
     "from utils.word2vec import Word2Vec"
    ]
   },
