--- a/notebooks/fit_model_and_save_embeddings.ipynb
+++ b/notebooks/fit_model_and_save_embeddings.ipynb
@@ -31,12 +31,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# built-in modules and packages\n",
+    "# built-in\n",
     "import sys\n",
     "import pickle\n",
     "from pathlib import Path\n",
     "\n",
-    "# installed modules and packages\n",
+    "# installed\n",
     "import numpy as np"
    ]
   },
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# local modules and packages\n",
+    "# local\n",
     "from utils.upload_text import get_text\n",
     "from utils.preprocessing import DefaultPreprocess\n",
     "from utils.word2vec import Word2Vec"
