--- a/notebooks/task_1/task_1_kant_hegel_eng.ipynb
+++ b/notebooks/task_1/task_1_kant_hegel_eng.ipynb
@@ -22,11 +22,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# built-in modules and packages\n",
+    "# built-in\n",
     "import sys\n",
     "import pickle\n",
     "\n",
-    "# installed modules and packages\n",
+    "# installed\n",
     "import numpy as np"
    ]
   },
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# local modules and packages\n",
+    "# local\n",
     "from utils.word2vec import Word2Vec"
    ]
   },
